updated cover page

--- a/css/website.css
+++ b/css/website.css
@@ -1,9 +1,15 @@
 body {
-  margin-top: 100px
+  margin-top: 100px;
 }
 
 .awhphoto {
   border-width: thick;
   border-color: #ffffff;
   border-style: solid;
+}
+
+
+
+.view {
+  height: 100%;
 }
